[tool.poetry]
name = "nsdpy"
version = "0.1.17"
description = "Automatize the donwload of DNA sequences from NCBI, sort them according to their taxonomy and filter them with a gene name (provided as a regular expression)"
authors = ["RaphaelHebert <raphaelhebert18@gmail.com>"]
include = ["functions.py"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RaphaelHebert/nsdpy"
homepage = "https://github.com/RaphaelHebert/nsdpy"
keywords = ["NCBI", "Taxonomy"]

[tool.poetry.dependencies]
python = "^3.8"
certifi= "^2020.12.5"
chardet= "^4.0.0"
idna= "^2.10"
requests= "^2.25.1"
urllib3= "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nsdpy = "nsdpy:main"




